# MOTORQ-SDE-Assignment

./: .gitignore  README.md
carFleetMngmntSysm/: README.md  architectur.md  main.py  pyproject.toml
carFleetMngmntSysm/fleetMngmntSys/: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  requirements.txt
carFleetMngmntSysm/fleetMngmntSys/fleetAnalytics/: apps.py  urls.py  views.py
carFleetMngmntSysm/fleetMngmntSys/fleetMngmntSys/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
carFleetMngmntSysm/fleetMngmntSys/telemetry/: models.py  tasks.py  urls.py  views.py
carFleetMngmntSysm/fleetMngmntSys/telemetry/migrations/: 0001_initial.py  0002_alter_alert_created_at_alter_alert_timestamp_and_more.py
carFleetMngmntSysm/fleetMngmntSys/vehicleFleet/: apps.py  models.py  urls.py  views.py
carFleetMngmntSysm/fleetMngmntSys/vehicleFleet/migrations/: 0001_initial.py  0002_vehicle_is_deleted.py
