[project]
name = "carfleetmngmntsysm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=4.2",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "django-ratelimit>=4.1.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "ratelimit>=2.2.1",
    "redis>=6.2.0",
]
